# armasec

./: .gitignore  404.html  CHANGELOG.md  CHANGELOG.rst  CONDUCT.md  CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.md  LICENSE.rst  MIGRATION_SUMMARY.md  Makefile  README.md  README.rst  index.html  objects.inv  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_docs.yaml  publish_on_tag.yaml  test_on_push.yaml
armasec/: __init__.py  armasec.py  exceptions.py  jwk.py  jwks.py  managers.py  mock_oidc.py  openid_config.py  openid_config_loader.py  pytest_extension.py  security.py  token_decoder.py  token_manager.py  token_payload.py  token_security.py  utilities.py
armasec-cli/: CHANGELOG.md  Makefile  README.md  pyproject.toml
armasec-cli/armasec_cli/: auth.py  client.py  exceptions.py  main.py  schemas.py
armasec-cli/tests/: check.py  conftest.py  test_auth.py  test_client.py  test_exceptions.py
armasec-core/: CHANGELOG.md  Makefile  README.md  pyproject.toml
armasec-core/armasec_core/: __init__.py  exceptions.py  openid_config_loader.py  pytest_extension.py  token_decoder.py  token_manager.py  token_payload.py  utilities.py
armasec-core/armasec_core/schemas/: jwks.py
armasec-core/tests/: test_token_decoder.py  test_token_manager.py  test_token_payload.py
armasec-docs/: Makefile  mkdocs.yaml  pyproject.toml
armasec-docs/source/: minimal_example.md  reference.md
armasec-docs/source/tutorials/: getting_started_with_auth0.md  getting_started_with_keycloak.md
armasec-fastapi/: CHANGELOG.md  Makefile  README.md  pyproject.toml
armasec-fastapi/armasec_fastapi/: __init__.py  armasec.py  token_security.py
armasec-fastapi/armasec_fastapi/schemas/: __init__.py  armasec_config.py  openid_config.py
armasec-fastapi/examples/: match_key_value_pairs.py
armasec-fastapi/tests/: conftest.py  test_armasec.py  test_token_security.py
armasec/managers/: __init__.py  asymmetric.py  base.py  test.py
armasec/pluggable/: __init__.py  hookspecs.py
armasec/schemas/: __init__.py  armasec_config.py  jwks.py  openid_config.py
armasec/token_decoders/: __init__.py  base.py  hs256.py  rs256.py
armasec_cli/: auth.py  cache.py  client.py  config.py  exceptions.py  main.py  schemas.py  time_loop.py
cli/: auth.py  cache.py  client.py  config.py  format.py  logging.py  main.py  schemas.py  time_loop.py
docs/: .buildinfo  armasec.armasec.html  armasec.exceptions.html  armasec.html  armasec.openid_config_loader.html  armasec.pytest_extension.html  armasec.schemas.html  armasec.schemas.jwks.html  armasec.schemas.openid_config.html  armasec.token_decoder.html  armasec.token_manager.html  armasec.token_payload.html  armasec.token_security.html  armasec.utilities.html  conf.py  genindex.html  getting_started.html  index.html  index.md  index.rst  minimal_example.html  mkdocs.yaml  modules.html  modules.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs-source/: conf.py  index.rst  minimal_example.rst
docs-source/tutorials/: index.rst
docs/.doctrees/: armasec.armasec.doctree  armasec.doctree  armasec.exceptions.doctree  armasec.openid_config_loader.doctree  armasec.pytest_extension.doctree  armasec.schemas.doctree  armasec.schemas.jwks.doctree  armasec.schemas.openid_config.doctree  armasec.token_decoder.doctree  armasec.token_manager.doctree  armasec.token_payload.doctree  armasec.token_security.doctree  armasec.utilities.doctree  environment.pickle  getting_started.doctree  index.doctree  minimal_example.doctree  modules.doctree
docs/.doctrees/tutorials/: getting_started_with_auth0.doctree  index.doctree
docs/_sources/: armasec.armasec.rst.txt  armasec.exceptions.rst.txt  armasec.openid_config_loader.rst.txt  armasec.pytest_extension.rst.txt  armasec.rst.txt  armasec.schemas.jwks.rst.txt  armasec.schemas.openid_config.rst.txt  armasec.schemas.rst.txt  armasec.token_decoder.rst.txt  armasec.token_manager.rst.txt  armasec.token_payload.rst.txt  armasec.token_security.rst.txt  armasec.utilities.rst.txt  getting_started.rst.txt
docs/_templates/: side-links.html
docs/source/: getting_started.md  index.md  minimal_example.md  plugins.md  reference.md
docs/source/stylesheets/: extra.css
docs/source/tutorials/: getting_started_with_auth0.md  getting_started_with_keycloak.md
docs/tutorials/: getting_started_with_auth0.html  getting_started_with_auth0.rst  index.html
examples/: auth0-example.py  basic.py  keycloak-example.py  keycloak.py  plugin.py  two_domains.py
getting_started/: index.html
minimal_example/: index.html
plugins/: index.html
reference/: index.html
search/: search_index.json
tests/: conftest.py  test_armasec.py  test_fixtures.py  test_managers.py  test_openid_config_loader.py  test_security.py  test_token_decoder.py  test_token_manager.py  test_token_payload.py  test_token_security.py  test_utilities.py
tests/armasec_cli/: conftest.py  test_auth.py  test_cache.py  test_client.py  test_config.py
tests/cli/: conftest.py  test_auth.py  test_cache.py  test_client.py  test_config.py  test_exceptions.py
tests/managers/: test_asymmetric.py  test_base.py  test_test.py
tests/token_decoders/: test_base.py  test_hs256.py  test_rs256.py
tutorials/getting_started_with_auth0/: index.html
tutorials/getting_started_with_keycloak/: index.html
