[tool.poetry]
name = "armasec"
version = "2.0.2"
description = "Injectable FastAPI auth via OIDC"
authors = ["Omnivector Engineering Team <info@omnivector.solutions>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/omnivector-solutions/armasec"
repository = "https://github.com/omnivector-solutions/armasec"
documentation = "https://omnivector-solutions.github.io/armasec"

packages = [
    { include = "armasec"},
    { include = "armasec_cli"},
]

[tool.poetry.urls]
CHANGELOG = "https://github.com/omnivector-solutions/armasec/blob/main/CHANGELOG.md"
CONDUCT = "https://github.com/omnivector-solutions/armasec/blob/main/CONDUCT.md"
CONTRIBUTING = "https://github.com/omnivector-solutions/armasec/blob/main/CONTRIBUTING.md"

[tool.poetry.dependencies]
python = "^3.8"
python-jose = {extras = ["cryptography"], version = "^3.2"}
fastapi = "^0.111"
pydantic = "^2.7"
httpx = "^0"
snick = "^1.3"
py-buzz = "^4.1"

# These must be included as a main dependency for the pytest extension to work out of the box
respx = "^0"
pytest = ">=6, <9"
auto-name-enum = "^2"

# These are needed for the "cli" extra
typer = "^0.12"
loguru = {version = "^0.5.3", optional = true}
rich = {version = "^13.5.2", optional = true}
pendulum = {version = "^3.0.0", optional = true}
pyperclip = {version = "^1.8.2", optional = true}
jmespath = "^1.0.1"
pluggy = "^1.4.0"

[tool.poetry.extras]
cli = ["typer", "loguru", "rich", "pendulum", "pyperclip"]


[tool.poetry.group.dev.dependencies]
ipython = ">=7,<9"
asgi-lifespan = "^1.0.1"
pytest-asyncio = "^0"
pytest-random-order = "^1.0.4"
mypy = "^1.5"
pytest-sugar = "^0.9.4"
python-dotenv = "^0.19"
pytest-cov = "^4"
uvicorn = "^0.30"
loguru = "^0.5.3"
mkdocs-material = "^9.1.21"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
pygments = "^2.16.1"
plummet = {extras = ["time-machine"], version = "^1.2.1"}
pytest-mock = "^3.11.1"
ruff = "^0.3"
types-jmespath = "^1.0.2.7"


[tool.poetry.scripts]
armasec = {callable = "armasec_cli.main:app", extras = ["cli"]}

[tool.poetry.plugins.pytest11]
pytest_armasec = "armasec.pytest_extension"

[tool.pytest.ini_options]
minversion = "6.0"
# Unfortunately, pytest-cov breaks when we add armasec.pytest_extension as a pytest plugin
# TODO: Figure out why this is and how to fix it
addopts = "--random-order"
testpaths = ["tests"]
asyncio_mode = "auto"

[[tool.mypy.overrides]]
module = [
    "jose",
    "buzz",
    "snick",
    "auto_name_enum",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
