[project]
name = "armasec"
version = "3.0.1"
description = "Injectable FastAPI auth via OIDC"
authors = [
    {name = "Omnivector Engineering Team", email = "info@omnivector.solutions"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["fastapi", "auth", "oidc", "oauth2", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-jose[cryptography]>=3.2,<4",
    "fastapi>=0.116.2,<1",
    "pydantic>=2.11.9,<3",
    "httpx>=0.28.1,<1",
    "snick>=2.1,<3",
    "py-buzz>=7.3,<8",
    "pluggy>=1.4.0,<2",
    # These must be included as a main dependency for the pytest extension to work out of the box
    "respx>=0.21,<1",
    "pytest>=6,<9",
    "auto-name-enum>=3.0.0,<4",
    # These are needed for the "cli" extra
    "typer>=0.12,<1",
]

[project.urls]
Homepage = "https://github.com/omnivector-solutions/armasec"
Repository = "https://github.com/omnivector-solutions/armasec"
Documentation = "https://omnivector-solutions.github.io/armasec"
Changelog = "https://github.com/omnivector-solutions/armasec/blob/main/CHANGELOG.md"
"Code of Conduct" = "https://github.com/omnivector-solutions/armasec/blob/main/CONDUCT.md"
Contributing = "https://github.com/omnivector-solutions/armasec/blob/main/CONTRIBUTING.md"

[project.optional-dependencies]
cli = [
    "loguru>=0.5.3,<1",
    "rich>=14.1.0,<15",
    "pendulum>=3.0.0,<4",
    "pyperclip>=1.8.2,<2",
]

[project.scripts]
armasec = "armasec_cli.main:app"

[project.entry-points."pytest11"]
pytest_armasec = "armasec.pytest_extension"

[dependency-groups]
dev = [
    "ipython>=7,<9",
    "asgi-lifespan>=2.1.0,<3",
    "pytest-asyncio>=1.2.0",
    "pytest-random-order>=1.0.4,<2",
    "mypy>=1.18.1,<2",
    "pytest-sugar>=1.1.1,<2",
    "python-dotenv>=1.1.1,<2",
    "pytest-cov>=7.0.0,<8",
    "uvicorn>=0.30,<1",
    "loguru>=0.5.3,<1",
    "mkdocs-material>=9.6.20,<10",
    "mkdocstrings[python]>=0.26,<1",
    "pygments>=2.16.1,<3",
    "plummet[time-machine]>=1.2.1,<2",
    "pytest-mock>=3.15.1,<4",
    "ruff>=0.13.0,<1",
]

[tool.pytest.ini_options]
minversion = "6.0"
# Unfortunately, pytest-cov breaks when we add armasec.pytest_extension as a pytest plugin
# TODO: Figure out why this is and how to fix it
addopts = "--random-order"
testpaths = ["tests"]
asyncio_mode = "auto"

[[tool.mypy.overrides]]
module = ["jose"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["armasec", "armasec_cli"]
